ldap-server-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ldap-server-admin
  name: ldap-server-admin
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 80
  type: LoadBalancer
  selector:
    name: ldap-server-admin
