ldap-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ldap-server
  name: ldap-server
spec:
  ports:
  - name: "389"
    port: 389
    targetPort: 389
  selector:
    name: ldap-server
